# fraud-detection-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: kafka_config.yaml  model_config.yaml  monitoring_config.yaml  pipeline_config.yaml
docker/: prometheus.yml  serving.Dockerfile
kubernetes/serving/: deployment.yaml  hpa.yaml  service.yaml
mlflow/: mlflow.Dockerfile
src/data/: schemas.py  transaction_simulator.py
src/features/: feature_engineering.py  kafka_consumer.py  kafka_producer.py  pipeline.py
src/monitoring/: drift_detector.py  metrics_collector.py  retraining_trigger.py
src/serving/: app.py  middleware.py  predictor.py  schemas.py
src/training/: data_validation.py  evaluate.py  model.py  train.py
src/utils/: config_loader.py  exceptions.py  logger.py
tests/: conftest.py
tests/unit/: test_feature_engineering.py  test_predictor.py
