[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection-mlops"
version = "0.1.0"
description = "Production-grade real-time fraud detection pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your@email.com" }
]

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Data validation
    "pydantic>=2.7.0",
    # ML
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Experiment tracking
    "mlflow>=2.13.0",
    # Kafka
    "confluent-kafka>=2.4.0",
    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    # Config
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    # Monitoring
    "prometheus-client>=0.20.0",
    # Drift detection
    "evidently>=0.4.30",
    # DVC
    "dvc>=3.51.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
    "pre-commit>=3.7.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ─── Ruff — our linter ───────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — Black handles this
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ─── Black — our formatter ───────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

# ─── Pytest ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-v",
]

# ─── Mypy — optional static type checker ─────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
